# cardinal-staking

./: Anchor.toml  Makefile  README.md  index.html  modules.html  package.json
assets/: search.js
enums/: rewardDistributor.RewardDistributorKind.html  stakePool.ReceiptType.html  stakePool.StakeType.html
modules/: rewardDistributor.accounts.html  rewardDistributor.html  rewardDistributor.instruction.html  rewardDistributor.pda.html  rewardDistributor.transaction.html  stakePool.accounts.html  stakePool.html  stakePool.instruction.html  stakePool.pda.html  stakePool.transaction.html
programs/cardinal-reward-distributor/: Cargo.toml
programs/cardinal-reward-distributor/src/: errors.rs  lib.rs  state.rs
programs/cardinal-reward-distributor/src/instructions/: claim_rewards.rs  close.rs  close_reward_distributor.rs  init_reward_distributor.rs  init_reward_entry.rs  mod.rs  reopen.rs  set_closed.rs  update_reward_entry.rs
src/: api.ts  index.ts  utils.ts
tests/: create-pool-init-entry-stake.spec.ts  creator-allowlist-fail.spec.ts  creator-allowlist.spec.ts  fungible-staking.spec.ts  init-entry-stake-receipts.spec.ts  init-entry-stake.spec.ts  init-pool-stake-unstake-with-reset.spec.ts  stake-authorization-record-fail.spec.ts  stake-authorization-record.spec.ts  stake-claim-rewards-treasury.spec.ts  stake-claim-rewards.spec.ts  stake-pool-claim-rewards-treasury.spec.ts  stake-pool-claim-rewards.spec.ts  stake-pool-count.spec.ts  stake-pool-creator-allowlist.spec.ts  stake-pool-disallowed.spec.ts  stake-receipts-claim-rewards-treasury.spec.ts  stake-receipts.spec.ts  (+5 more)
(+45 files in other folders)
